--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -201,158 +201,158 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     float: left;
-    margin-left: 2.5641025641026%;
-    *margin-left: 2.5109110747409%;
+    margin-left: 2.5%;
+    *margin-left: 2.44680851064%;
   }
   .row-fluid [class*="span"]:first-child {
     margin-left: 0;
   }
   .row-fluid .controls-row [class*="span"] + [class*="span"] {
-    margin-left: 2.5641025641026%;
+    margin-left: 2.5%;
   }
   .row-fluid .span12 {
-    width: 100%;
-    *width: 99.946808510638%;
+    width: 97.46%;
+    *width: 97.4068085106%;
   }
   .row-fluid .span11 {
-    width: 91.452991452991%;
-    *width: 91.39979996363%;
+    width: 89.13%;
+    *width: 89.0768085106%;
   }
   .row-fluid .span10 {
-    width: 82.905982905983%;
-    *width: 82.852791416621%;
+    width: 80.8%;
+    *width: 80.7468085106%;
   }
   .row-fluid .span9 {
-    width: 74.358974358974%;
-    *width: 74.305782869613%;
+    width: 72.47%;
+    *width: 72.4168085106%;
   }
   .row-fluid .span8 {
-    width: 65.811965811966%;
-    *width: 65.758774322604%;
+    width: 64.14%;
+    *width: 64.0868085106%;
   }
   .row-fluid .span7 {
-    width: 57.264957264957%;
-    *width: 57.211765775596%;
+    width: 55.81%;
+    *width: 55.7568085106%;
   }
   .row-fluid .span6 {
-    width: 48.717948717949%;
-    *width: 48.664757228587%;
+    width: 47.48%;
+    *width: 47.4268085106%;
   }
   .row-fluid .span5 {
-    width: 40.17094017094%;
-    *width: 40.117748681578%;
+    width: 39.15%;
+    *width: 39.0968085106%;
   }
   .row-fluid .span4 {
-    width: 31.623931623932%;
-    *width: 31.57074013457%;
+    width: 30.82%;
+    *width: 30.7668085106%;
   }
   .row-fluid .span3 {
-    width: 23.076923076923%;
-    *width: 23.023731587561%;
+    width: 22.49%;
+    *width: 22.4368085106%;
   }
   .row-fluid .span2 {
-    width: 14.529914529915%;
-    *width: 14.476723040553%;
+    width: 14.16%;
+    *width: 14.1068085106%;
   }
   .row-fluid .span1 {
-    width: 5.982905982906%;
-    *width: 5.9297144935443%;
+    width: 5.83%;
+    *width: 5.77680851064%;
   }
   .row-fluid .offset12 {
-    margin-left: 105.12820512821%;
-    *margin-left: 105.02182214948%;
+    margin-left: 102.46%;
+    *margin-left: 102.353617021%;
   }
   .row-fluid .offset12:first-child {
-    margin-left: 102.5641025641%;
-    *margin-left: 102.45771958538%;
+    margin-left: 99.96%;
+    *margin-left: 99.8536170213%;
   }
   .row-fluid .offset11 {
-    margin-left: 96.581196581197%;
-    *margin-left: 96.474813602473%;
+    margin-left: 94.13%;
+    *margin-left: 94.0236170213%;
   }
   .row-fluid .offset11:first-child {
-    margin-left: 94.017094017094%;
-    *margin-left: 93.910711038371%;
+    margin-left: 91.63%;
+    *margin-left: 91.5236170213%;
   }
   .row-fluid .offset10 {
-    margin-left: 88.034188034188%;
-    *margin-left: 87.927805055465%;
+    margin-left: 85.8%;
+    *margin-left: 85.6936170213%;
   }
   .row-fluid .offset10:first-child {
-    margin-left: 85.470085470085%;
-    *margin-left: 85.363702491362%;
+    margin-left: 83.3%;
+    *margin-left: 83.1936170213%;
   }
   .row-fluid .offset9 {
-    margin-left: 79.487179487179%;
-    *margin-left: 79.380796508456%;
+    margin-left: 77.47%;
+    *margin-left: 77.3636170213%;
   }
   .row-fluid .offset9:first-child {
-    margin-left: 76.923076923077%;
-    *margin-left: 76.816693944354%;
+    margin-left: 74.97%;
+    *margin-left: 74.8636170213%;
   }
   .row-fluid .offset8 {
-    margin-left: 70.940170940171%;
-    *margin-left: 70.833787961448%;
+    margin-left: 69.14%;
+    *margin-left: 69.0336170213%;
   }
   .row-fluid .offset8:first-child {
-    margin-left: 68.376068376068%;
-    *margin-left: 68.269685397345%;
+    margin-left: 66.64%;
+    *margin-left: 66.5336170213%;
   }
   .row-fluid .offset7 {
-    margin-left: 62.393162393162%;
-    *margin-left: 62.286779414439%;
+    margin-left: 60.81%;
+    *margin-left: 60.7036170213%;
   }
   .row-fluid .offset7:first-child {
-    margin-left: 59.82905982906%;
-    *margin-left: 59.722676850336%;
+    margin-left: 58.31%;
+    *margin-left: 58.2036170213%;
   }
   .row-fluid .offset6 {
-    margin-left: 53.846153846154%;
-    *margin-left: 53.73977086743%;
+    margin-left: 52.48%;
+    *margin-left: 52.3736170213%;
   }
   .row-fluid .offset6:first-child {
-    margin-left: 51.282051282051%;
-    *margin-left: 51.175668303328%;
+    margin-left: 49.98%;
+    *margin-left: 49.8736170213%;
   }
   .row-fluid .offset5 {
-    margin-left: 45.299145299145%;
-    *margin-left: 45.192762320422%;
+    margin-left: 44.15%;
+    *margin-left: 44.0436170213%;
   }
   .row-fluid .offset5:first-child {
-    margin-left: 42.735042735043%;
-    *margin-left: 42.628659756319%;
+    margin-left: 41.65%;
+    *margin-left: 41.5436170213%;
   }
   .row-fluid .offset4 {
-    margin-left: 36.752136752137%;
-    *margin-left: 36.645753773413%;
+    margin-left: 35.82%;
+    *margin-left: 35.7136170213%;
   }
   .row-fluid .offset4:first-child {
-    margin-left: 34.188034188034%;
-    *margin-left: 34.081651209311%;
+    margin-left: 33.32%;
+    *margin-left: 33.2136170213%;
   }
   .row-fluid .offset3 {
-    margin-left: 28.205128205128%;
-    *margin-left: 28.098745226405%;
+    margin-left: 27.49%;
+    *margin-left: 27.3836170213%;
   }
   .row-fluid .offset3:first-child {
-    margin-left: 25.641025641026%;
-    *margin-left: 25.534642662302%;
+    margin-left: 24.99%;
+    *margin-left: 24.8836170213%;
   }
   .row-fluid .offset2 {
-    margin-left: 19.65811965812%;
-    *margin-left: 19.551736679396%;
+    margin-left: 19.16%;
+    *margin-left: 19.0536170213%;
   }
   .row-fluid .offset2:first-child {
-    margin-left: 17.094017094017%;
-    *margin-left: 16.987634115294%;
+    margin-left: 16.66%;
+    *margin-left: 16.5536170213%;
   }
   .row-fluid .offset1 {
-    margin-left: 11.111111111111%;
-    *margin-left: 11.004728132388%;
+    margin-left: 10.83%;
+    *margin-left: 10.7236170213%;
   }
   .row-fluid .offset1:first-child {
-    margin-left: 8.5470085470085%;
-    *margin-left: 8.4406255682851%;
+    margin-left: 8.33%;
+    *margin-left: 8.22361702128%;
   }
   input,
   textarea,
@@ -526,158 +526,158 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     float: left;
-    margin-left: 2.7624309392265%;
-    *margin-left: 2.7092394498648%;
+    margin-left: 2.6%;
+    *margin-left: 2.54680851064%;
   }
   .row-fluid [class*="span"]:first-child {
     margin-left: 0;
   }
   .row-fluid .controls-row [class*="span"] + [class*="span"] {
-    margin-left: 2.7624309392265%;
+    margin-left: 2.6%;
   }
   .row-fluid .span12 {
-    width: 100%;
-    *width: 99.946808510638%;
+    width: 94.24%;
+    *width: 94.1868085106%;
   }
   .row-fluid .span11 {
-    width: 91.452991452991%;
-    *width: 91.39979996363%;
+    width: 89.13%;
+    *width: 89.0768085106%;
   }
   .row-fluid .span10 {
-    width: 82.905982905983%;
-    *width: 82.852791416621%;
+    width: 80.8%;
+    *width: 80.7468085106%;
   }
   .row-fluid .span9 {
-    width: 74.358974358974%;
-    *width: 74.305782869613%;
+    width: 72.47%;
+    *width: 72.4168085106%;
   }
   .row-fluid .span8 {
-    width: 65.811965811966%;
-    *width: 65.758774322604%;
+    width: 64.14%;
+    *width: 64.0868085106%;
   }
   .row-fluid .span7 {
-    width: 57.264957264957%;
-    *width: 57.211765775596%;
+    width: 55.81%;
+    *width: 55.7568085106%;
   }
   .row-fluid .span6 {
-    width: 48.717948717949%;
-    *width: 48.664757228587%;
+    width: 47.48%;
+    *width: 47.4268085106%;
   }
   .row-fluid .span5 {
-    width: 40.17094017094%;
-    *width: 40.117748681578%;
+    width: 39.15%;
+    *width: 39.0968085106%;
   }
   .row-fluid .span4 {
-    width: 31.623931623932%;
-    *width: 31.57074013457%;
+    width: 30.82%;
+    *width: 30.7668085106%;
   }
   .row-fluid .span3 {
-    width: 23.076923076923%;
-    *width: 23.023731587561%;
+    width: 22.49%;
+    *width: 22.4368085106%;
   }
   .row-fluid .span2 {
-    width: 14.529914529915%;
-    *width: 14.476723040553%;
+    width: 14.16%;
+    *width: 14.1068085106%;
   }
   .row-fluid .span1 {
-    width: 5.982905982906%;
-    *width: 5.9297144935443%;
+    width: 5.83%;
+    *width: 5.77680851064%;
   }
   .row-fluid .offset12 {
-    margin-left: 105.52486187845%;
-    *margin-left: 105.41847889973%;
+    margin-left: 99.44%;
+    *margin-left: 99.3336170213%;
   }
   .row-fluid .offset12:first-child {
-    margin-left: 102.76243093923%;
-    *margin-left: 102.6560479605%;
+    margin-left: 96.84%;
+    *margin-left: 96.7336170213%;
   }
   .row-fluid .offset11 {
-    margin-left: 96.581196581197%;
-    *margin-left: 96.474813602473%;
+    margin-left: 94.13%;
+    *margin-left: 94.0236170213%;
   }
   .row-fluid .offset11:first-child {
-    margin-left: 94.017094017094%;
-    *margin-left: 93.910711038371%;
+    margin-left: 91.63%;
+    *margin-left: 91.5236170213%;
   }
   .row-fluid .offset10 {
-    margin-left: 88.034188034188%;
-    *margin-left: 87.927805055465%;
+    margin-left: 85.8%;
+    *margin-left: 85.6936170213%;
   }
   .row-fluid .offset10:first-child {
-    margin-left: 85.470085470085%;
-    *margin-left: 85.363702491362%;
+    margin-left: 83.3%;
+    *margin-left: 83.1936170213%;
   }
   .row-fluid .offset9 {
-    margin-left: 79.487179487179%;
-    *margin-left: 79.380796508456%;
+    margin-left: 77.47%;
+    *margin-left: 77.3636170213%;
   }
   .row-fluid .offset9:first-child {
-    margin-left: 76.923076923077%;
-    *margin-left: 76.816693944354%;
+    margin-left: 74.97%;
+    *margin-left: 74.8636170213%;
   }
   .row-fluid .offset8 {
-    margin-left: 70.940170940171%;
-    *margin-left: 70.833787961448%;
+    margin-left: 69.14%;
+    *margin-left: 69.0336170213%;
   }
   .row-fluid .offset8:first-child {
-    margin-left: 68.376068376068%;
-    *margin-left: 68.269685397345%;
+    margin-left: 66.64%;
+    *margin-left: 66.5336170213%;
   }
   .row-fluid .offset7 {
-    margin-left: 62.393162393162%;
-    *margin-left: 62.286779414439%;
+    margin-left: 60.81%;
+    *margin-left: 60.7036170213%;
   }
   .row-fluid .offset7:first-child {
-    margin-left: 59.82905982906%;
-    *margin-left: 59.722676850336%;
+    margin-left: 58.31%;
+    *margin-left: 58.2036170213%;
   }
   .row-fluid .offset6 {
-    margin-left: 53.846153846154%;
-    *margin-left: 53.73977086743%;
+    margin-left: 52.48%;
+    *margin-left: 52.3736170213%;
   }
   .row-fluid .offset6:first-child {
-    margin-left: 51.282051282051%;
-    *margin-left: 51.175668303328%;
+    margin-left: 49.98%;
+    *margin-left: 49.8736170213%;
   }
   .row-fluid .offset5 {
-    margin-left: 45.299145299145%;
-    *margin-left: 45.192762320422%;
+    margin-left: 44.15%;
+    *margin-left: 44.0436170213%;
   }
   .row-fluid .offset5:first-child {
-    margin-left: 42.735042735043%;
-    *margin-left: 42.628659756319%;
+    margin-left: 41.65%;
+    *margin-left: 41.5436170213%;
   }
   .row-fluid .offset4 {
-    margin-left: 36.752136752137%;
-    *margin-left: 36.645753773413%;
+    margin-left: 35.82%;
+    *margin-left: 35.7136170213%;
   }
   .row-fluid .offset4:first-child {
-    margin-left: 34.188034188034%;
-    *margin-left: 34.081651209311%;
+    margin-left: 33.32%;
+    *margin-left: 33.2136170213%;
   }
   .row-fluid .offset3 {
-    margin-left: 28.205128205128%;
-    *margin-left: 28.098745226405%;
+    margin-left: 27.49%;
+    *margin-left: 27.3836170213%;
   }
   .row-fluid .offset3:first-child {
-    margin-left: 25.641025641026%;
-    *margin-left: 25.534642662302%;
+    margin-left: 24.99%;
+    *margin-left: 24.8836170213%;
   }
   .row-fluid .offset2 {
-    margin-left: 19.65811965812%;
-    *margin-left: 19.551736679396%;
+    margin-left: 19.16%;
+    *margin-left: 19.0536170213%;
   }
   .row-fluid .offset2:first-child {
-    margin-left: 17.094017094017%;
-    *margin-left: 16.987634115294%;
+    margin-left: 16.66%;
+    *margin-left: 16.5536170213%;
   }
   .row-fluid .offset1 {
-    margin-left: 11.111111111111%;
-    *margin-left: 11.004728132388%;
+    margin-left: 10.83%;
+    *margin-left: 10.7236170213%;
   }
   .row-fluid .offset1:first-child {
-    margin-left: 8.5470085470085%;
-    *margin-left: 8.4406255682851%;
+    margin-left: 8.33%;
+    *margin-left: 8.22361702128%;
   }
   input,
   textarea,
@@ -946,7 +946,7 @@
   }
   .navbar-inverse .nav-collapse .nav > li > a,
   .navbar-inverse .nav-collapse .dropdown-menu a {
-    color: #999;
+    color: #939393;
   }
   .navbar-inverse .nav-collapse .nav > li > a:hover,
   .navbar-inverse .nav-collapse .nav > li > a:focus,
